# src/JerseyOs.Web/src/types/api.ts
@@ -17,6 +17,7 @@ export type TaxonomyItemDto = components['schemas']['TaxonomyItemResponse'];
 export type CreateTaxonomyItemDto = components['schemas']['CreateTaxonomyItemRequest'];
 export type SupplierDto = components['schemas']['SupplierResponse'];
 export type CreateSupplierDto = components['schemas']['CreateSupplierRequest'];
+export type SupplierScrapeRunDto = components['schemas']['SupplierScrapeRunResponse'];
 export type ImportBatchSummaryDto = components['schemas']['ImportBatchSummaryResponse'];
 export type ImportBatchDetailDto = components['schemas']['ImportBatchDetailResponse'];
 export type ImportItemDto = components['schemas']['ImportItemResponse'];
